@@ -580,10 +580,10 @@ class PathPart(gtk.EventBox):
         self.set_redraw_on_allocate(False)
         self.set_visible_window(False)
 
-        part_atk = self.get_accessible()
-        part_atk.set_name(label)
-        part_atk.set_description(_('Navigates to the %s page.' % label))
-        part_atk.set_role(atk.ROLE_PUSH_BUTTON)
+        self.atk = self.get_accessible()
+        self.atk.set_name(label)
+        self.atk.set_description(_('Navigates to the %s page.' % label))
+        self.atk.set_role(atk.ROLE_PUSH_BUTTON)
 
         self.invisible = False
         self._parent = parent
@@ -683,6 +683,8 @@ class PathPart(gtk.EventBox):
     def set_label(self, label):
         if label == self.label: return
         self.label = gobject.markup_escape_text(label.strip())
+        self.atk.set_name(label)
+        self.atk.set_description(_('Navigates to the %s page.' % label))
         if not self.layout:
             self._make_layout()
         else:
