@@ -14,6 +14,8 @@ software-center (2.1.20) UNRELEASED; urgency=low
   [ Kiwinote ]
   * softwarecenter/view/appview.py:
     - set buttons which aren't rendered insensitive (LP: #630521)
+  * softwarecenter/view/widgets/pathbar_gtk_atk.py:
+    - update a11y text when pathbar part gets new label
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 14 Sep 2010 14:07:00 +0200
 
